--- a/Jasmine.plist
+++ b/Jasmine.plist
@@ -11,7 +11,7 @@
                     <key>kind</key>
                     <string>software-package</string>
                     <key>url</key>
-                    <string>https://gpt89.github.io/blob/main/Jasmine_1.4.8_1693451149.ipa</string>
+                    <string>https://github.com/gpt89.github.io/blob/main/Jasmine_1.4.8_1693451149.ipa</string>
                 </dict>
             </array>
             <key>metadata</key>
