--- a/Jasmine.plist
+++ b/Jasmine.plist
@@ -25,9 +25,9 @@
 			<key>metadata</key>
 			<dict>
 				<key>bundle-identifier</key>
-				<string>com.zhiliaoapp.musically</string>
+				<string>opensource.jasmine</string>
 				<key>bundle-version</key>
-				<string>1.0</string>
+				<string>1.4.8</string>
 				<key>kind</key>
 				<string>software</string>
 				<key>subtitle</key>
